# predictakit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: binary_cross_entropy.py  dot_product.py  gradient_descent.md  gradient_descent.py  matrix_multiply.py  mean_squared_error.py  normal_equation.py  sigmoid.py
predictakit/core/: linear_regression.py  logistic_regression.py
predictakit/docs/: learning_journal.md
predictakit/examples/: epl_prediction.py  epl_prediction_classifier.py
