  [build-system]                                                                                                                                      
  requires = ["setuptools>=64"]                                                                                                                       
  build-backend = "setuptools.build_meta"                                                                                              

  [tool.setuptools.packages.find]                                                                                                                     
  include = ["predictakit*"]
                                                                                                                                                  
  [project]                                                                                                                                           
  name = "predictakit"                                                                                                                                
  version = "0.1.0"                                         
  requires-python = ">=3.10"
  dependencies = [
      "numpy",
      "pandas"
  ]